// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`acceptance users DELETE / should delete user 1`] = `
Object {
  "status": "ok",
}
`;

exports[`acceptance users GET / should return user 1`] = `
Object {
  "email": "test@test.cc",
  "firstName": "first",
  "id": 1,
  "lastName": "last",
  "username": "getuser",
}
`;

exports[`acceptance users POST /login should return token 1`] = `
Object {
  "email": "test@test.cc",
  "firstName": "first",
  "id": 1,
  "lastName": "last",
  "username": "loginuser",
}
`;

exports[`acceptance users POST /signup should return token 1`] = `
Object {
  "email": "test@test.cc",
  "firstName": "first",
  "id": 1,
  "lastName": "last",
  "username": "signupuser",
}
`;

exports[`acceptance users PUT / should update user 1`] = `
Object {
  "status": "ok",
  "user": Object {
    "email": "test@test.cc",
    "firstName": "first",
    "id": 1,
    "lastName": "last",
    "username": "username2",
  },
}
`;

exports[`acceptance users PUT /forgot should update passwordResetToken user 1`] = `
Object {
  "status": "ok",
}
`;

exports[`acceptance users PUT /reset should update user password 1`] = `
Object {
  "status": "ok",
}
`;
